// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It could add custom methods through addMethods 1`] = `
<Vali(Input)
  required={true}
>
  <Input
    message=""
    required={true}
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Vali(Input)>
`;

exports[`It sould be not valid if input has empty 1`] = `
<Vali(Input)
  required={true}
>
  <Input
    message="It should have value"
    required={true}
    valid={false}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div>
        It should have value
      </div>
    </div>
  </Input>
</Vali(Input)>
`;

exports[`It sould be valid if input has value 1`] = `
<Vali(Input)
  required={true}
>
  <Input
    message=""
    required={true}
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Vali(Input)>
`;
